--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
       rel="stylesheet"
     />
-    <title>Metakosmos</title>
+    <title>Kosmosuit</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   </head>
   <body>
